<resources>
    <string name="app_name">PasswordGenerator</string>
    <string name="add_record">Добавить запись</string>
    <string name="my_passwords">Мои Пароли</string>
    <string name="generation_button">Сгенерировать</string>
    <string name="title1">Название</string>
    <string name="login">Логин</string>
    <string name="url">URL</string>
    <string name="text">Заметка</string>
    <string name="password">Пароль</string>
    <string name="save">Сохранить</string>
    <string name="back">Назад</string>
    <string name="password_length">Длина пароля:</string>
    <string name="upper_case">Прописные буквы</string>
    <string name="lower_case">Строчные буквы</string>
    <string name="digit">Цифры</string>
    <string name="symbol">Специальные символы</string>
    <string name="apply">ПРИНЯТЬ</string>
    <string name="title_activity_my_passwords">activity_my_passwords</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_password">PasswordActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_generator">Generator</string>
    <string name="note">Заметка</string>
    <string name="choose_one_point">Хотя бы один пункт должен быть выбран</string>
    <string name="not_all_fields_filled">Не все поля заполнены</string>
</resources>