<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#DDBFE3"
    tools:context=".Generator">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/generator_toolbar"
        android:layout_width="414dp"
        android:layout_height="wrap_content"
        android:background="#5D4981"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#5D4981"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="@id/generator_toolbar"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="4dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/password_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="ВАШ ПАРОЛЬ"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/generator_toolbar"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/password_length_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/password_length"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@id/popup_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_textView" />

    <TextView
        android:id="@+id/popup_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="25sp"
        android:text="10"
        app:layout_constraintEnd_toStartOf="@id/password_length_up"
        app:layout_constraintStart_toEndOf="@id/password_length_textView"
        app:layout_constraintTop_toTopOf="@id/password_length_textView" />

    <ImageButton
        android:id="@+id/password_length_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/password_length_down"
        app:layout_constraintStart_toEndOf="@id/popup_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_textView"
        android:padding="0dp"
        android:layout_marginTop="15dp"
        app:srcCompat="@drawable/ic_arrow_up"
        tools:ignore="VectorDrawableCompat" />

    <ImageButton
        android:id="@+id/password_length_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/password_length_up"
        app:layout_constraintStart_toStartOf="@id/password_length_up"
        android:padding="0dp"
        app:srcCompat="@drawable/ic_arrow_down"
        tools:ignore="VectorDrawableCompat" />

    <CheckBox
        android:id="@+id/uppercase_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/upper_case"
        app:layout_constraintStart_toStartOf="@id/password_length_textView"
        app:layout_constraintTop_toBottomOf="@id/password_length_textView" />

    <CheckBox
        android:id="@+id/lowercase_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lower_case"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/uppercase_cb"
        app:layout_constraintTop_toBottomOf="@id/uppercase_cb" />

    <CheckBox
        android:id="@+id/digit_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/digit"

        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/lowercase_cb"
        app:layout_constraintTop_toBottomOf="@id/lowercase_cb" />

    <CheckBox
        android:id="@+id/symbol_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/symbol"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/digit_cb"
        app:layout_constraintTop_toBottomOf="@id/digit_cb" />

    <Button
        android:id="@+id/generation_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:background="#96649E"
        android:elevation="6dp"
        android:shadowColor="#D52929"
        android:text="@string/generation_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/apply"
        app:layout_constraintTop_toTopOf="@id/apply"
        android:onClick="generate"/>

    <Button
        android:id="@+id/apply"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:elevation="6dp"
        android:shadowColor="#D52929"
        android:text="@string/apply"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toStartOf="@id/generation_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/symbol_cb"
        android:onClick="applyPassword"/>




</androidx.constraintlayout.widget.ConstraintLayout>